--- a/templates/main.html
+++ b/templates/main.html
@@ -44,7 +44,7 @@
                 <table class="table table-info table-striped">
                     <tr>
                         <th>Sno</th>
-                        <th>Student Name</th>
+                        <th>Students Name</th>
                         <th>Student course</th>
                         <th>Status</th>
                         <th>Action</th>
